--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ h1 {
     font-weight: bold;
     margin-top: 40px;
     margin-bottom: 10px;
+    font-size: 18px;
 }
 
 .formulario .ofertas-radio {
